[project]
name = "supreme-garbanzo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "crawl4ai>=0.8.6",
    "ollama>=0.6.1",
    "playwright>=1.58.0",
    "pydantic-ai>=1.87.0",
    "ruff>=0.15.12",
]
